# smart_research_agent

./: .env_example  README copy.md  README.md  pyproject.toml
src/smart_research_agent/app/: agent.py  config.py  ui.py
src/smart_research_agent/app/prompts/: system.txt
src/smart_research_agent/app/tools/: fetch_page.py  web_search.py
